--- a/kamoku3.css
+++ b/kamoku3.css
@@ -3,7 +3,7 @@
     padding: 0.5em 1em;
     margin: 2em 0;
     color: #5d627b;
-    border-top: solid 5px #414e91;
+    border-top: solid 5px #FFD5EC;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
 }
 
